plugins {
    id 'java'
}

group 'org.vorin'
version '1.0-SNAPSHOT'

sourceCompatibility = 11.1
targetCompatibility = 11.1

repositories {
    mavenCentral()
}

dependencies {
    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
    compile group: 'commons-io', name: 'commons-io', version: '2.6'
    compile group: 'com.google.guava', name: 'guava', version: '28.1-jre'

    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.10.1'

    compile group: 'com.mashape.unirest', name: 'unirest-java', version: '1.4.9'

    compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
    compile group: 'com.sun.xml.bind', name: 'jaxb-impl', version: '2.3.1'
    compile group: 'com.sun.xml.bind', name: 'jaxb-core', version: '2.3.0.1'

    compile group: 'org.jsoup', name: 'jsoup', version: '1.12.1'

    testCompile group: 'junit', name: 'junit', version: '4.12'
    testCompile group: 'org.mockito', name: 'mockito-core', version: '3.2.4'

}
